<resources>
    <string name="app_name">Discometro</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="CorreoDNI">Correo electrónico o DNI</string>
    <string name="Contraseña">Contraseña</string>
    <string name="Recuérdame">Recuérdame</string>
    <string name="login">LOGIN</string>
    <string name="LogoDiscometro">Logo</string>

    <string name="spinner_vehicles">dropDownMenuExample</string>
    <string-array name="vehicles">
        <item>A pie</item>
        <item>Coche</item>
        <item>Autobus</item>
        <item>Moto</item>
        <item>Taxi</item>
        <item>Bicicleta</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vuelta_segura">Vuelta Segura</string>
    <string name="suscripciones">Suscripciones</string>
    <string name="favoritos">Favoritos</string>
    <string name="perfil">Perfil</string>
    <string name="mapa">Mapa</string>
    <string name="registrar">Registrar</string>
</resources>